--- a/appphone/jiuzhidaophone/build.gradle
+++ b/appphone/jiuzhidaophone/build.gradle
@@ -99,6 +99,8 @@ dependencies {
     implementation(name: 'uSDK4.4.04', ext: 'aar')
     // assetsfitandroid
     implementation 'com.blankj:utilcode:1.17.2'
+    // AutoEx
+    implementation 'com.github.BolexLiu.AutoEx:AutoEx-Lib-No-Op:v1.0.8'
 
     implementation project(':appphone:jiuzhidaophone-index')
     implementation project(':appphone:jiuzhidaophone-share')
